--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-icons": "^3.5.0",
     "react-infinite-scroll-component": "^4.5.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
@@ -23,5 +24,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "postcss-nested": "^4.1.2",
+    "react-app-rewire-postcss": "^3.0.2"
+  }
 }
