--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.8.4",
     "react-icons": "^3.5.0",
     "react-infinite-scroll-component": "^4.5.1",
+    "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8"
   },
