--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "postcss-nested": "^4.1.2",
-    "react-app-rewire-postcss": "^3.0.2"
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "enzyme-to-json": "^3.3.5",
+    "fsevents": "^1.2.7",
+    "react-test-renderer": "^16.8.5"
   }
 }
