--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eventsource": "^1.0.7",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-icons": "^3.5.0",
     "react-infinite-scroll-component": "^4.5.1",
     "react-loader-spinner": "^2.3.0",
-    "react-router-dom": "^4.4.0",
+    "react-router-dom": "^5.0.0",
+    "react-router-transition": "^1.3.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
