--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_PATH=src/ react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "NODE_PATH=src/ react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
