--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "NODE_PATH=src/ react-scripts start",
-    "build": "react-scripts build",
+    "build": "NODE_PATH=src/ react-scripts build",
     "test": "NODE_PATH=src/ react-scripts test",
     "eject": "react-scripts eject"
   },
