--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "TeamApp",
-  "name": "A new way to collaborate",
+  "short_name": "Teamapp",
+  "name": "Teamapp Client",
   "icons": [
     {
-      "src": "./favicon.png",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
